--- a/packages/pilot/package.json
+++ b/packages/pilot/package.json
@@ -51,6 +51,7 @@
     "@percy-io/in-percy": "0.1.11",
     "@storybook/addon-a11y": "5.2.5",
     "@storybook/addon-actions": "5.2.5",
+    "@storybook/addon-knobs": "6.0.21",
     "@storybook/addon-links": "5.2.5",
     "@storybook/addon-options": "5.2.5",
     "@storybook/addons": "5.2.5",
