--- a/packages/pilot/package.json
+++ b/packages/pilot/package.json
@@ -47,7 +47,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
-    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/plugin-proposal-optional-chaining": "7.11.0",
+    "@babel/plugin-transform-runtime": "7.11.5",
     "@percy-io/in-percy": "0.1.11",
     "@storybook/addon-a11y": "5.2.5",
     "@storybook/addon-actions": "5.2.5",
