recipients: add refund export recipient to pdf

--- a/packages/pilot/package.json
+++ b/packages/pilot/package.json
@@ -19,6 +19,7 @@
     "normalize.css": "8.0.1",
     "p4g4rm3": "0.1.7",
     "pagarme": "4.13.0",
+    "pdfmake": "0.1.68",
     "prop-types": "15.6.2",
     "qs": "6.5.1",
     "ramda": "0.26.1",
